@@ -144,6 +144,11 @@ ACE_TMAIN (int argc, ACE_TCHAR *argv[]) {
 
         // Write samples using multiple threads.
         std::auto_ptr<Writer> writer (new Writer (dw_tmp.in ()));
+        if (!writer->start () || !writer->end ())
+        {
+          // Error logging performed in above method call.
+          exit (1);
+        }
 
         // Explicitly destroy the DataWriter.
         if (pub->delete_datawriter (dw_tmp.in ())
@@ -152,6 +157,9 @@ ACE_TMAIN (int argc, ACE_TCHAR *argv[]) {
           cerr << "Unable to delete DataWriter" << endl;
           exit (1);
         }
+
+        ACE_DEBUG ((LM_INFO,
+                    ACE_TEXT ("(%P|%t) Deleted DataWriter.\n")));
       }
 
       // -------------------------------------------------------
